--- a/packages/features/home_page/lib/src/l10n/text_en.arb
+++ b/packages/features/home_page/lib/src/l10n/text_en.arb
@@ -5,5 +5,6 @@
     "meat": "MEAT",
     "vegetables": "VEGETABLES",
     "other": "OTHER",
-    "done": "DONE"
+    "done": "DONE",
+    "search": "Search recipe!"
 }
